<resources>
    <string name="app_name">Porta via</string>
    <string name="et_user">Brugernavn</string>
    <string name="et_pass">Adgangskode</string>
    <string name="btn_login">Login</string>
    <string name="link_password_recovery">Glemt adgangskode?</string>
    <string name="btn_recover">Nulstil kode</string>
    <string name="link_back_to_login">Gå tilbage til login skærmen</string>
    <string name="btn_loout">Log ud</string>
    <string name="tv_restaurantname">Restaurant navn</string>
    <string name="et_restaurantname">Indtast restaurantens navn</string>
    <string name="toast_reset_password_success">Vi har sendt en e-mail, der hjælper dig med at nulstille din
        adgangskode.
    </string>
    <string name="toast_reset_password_fail">Vi kunne ikke sende en e-mail til dig, kontroler at den oplyste email er
        korrekt.
    </string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
        anim id est laborum.
    </string>
</resources>