<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".SettingsActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content">
            <TextView
                    android:text="@string/app_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:paddingTop="35dp"
                    android:paddingBottom="65dp"
                    android:textSize="36sp"
                    android:textColor="@color/colorLighter"
                    android:background="@color/colorDarker"
                    android:textAlignment="center"/>
            <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/image_background"
                    app:srcCompat="@drawable/cheff"
                    android:contentDescription="@string/app_name"
                    android:layout_marginTop="105dp"/>



        </RelativeLayout>
        <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:srcCompat="@drawable/chat"
                android:layout_marginTop="-195dp"
                android:layout_marginStart="15dp"/>

        <ImageView
                android:id="@+id/iv_settings_to_dashboard"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:srcCompat="@drawable/check_list"
                android:layout_marginTop="-32dp"
                android:layout_marginEnd="15dp"
                android:layout_gravity="end"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:orientation="vertical"

        >
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_restaurantname"
                    android:layout_marginBottom="20dp"

            />
            <EditText
                    android:id="@+id/et_restaurantname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_restaurantname"
            />

            <Button
                    android:id="@+id/btn_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_loout"
            />

        </LinearLayout>

    </LinearLayout>

</ScrollView>