<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".PasswordRecoveryActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">
        <TextView
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:paddingTop="35dp"
                android:paddingBottom="90dp"
                android:textSize="36sp"
                android:textColor="@color/colorLighter"
                android:background="@color/colorDarker"
                android:textAlignment="center"/>
        <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/image_background"
                app:srcCompat="@drawable/cheff"
                android:contentDescription="@string/app_name"
                android:layout_marginTop="105dp"/>

    </RelativeLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp"
            android:layout_marginTop="20dp">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

            <EditText
                    android:id="@+id/et_password_recovery_username"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/et_user"
                    android:autofillHints="username"
                    android:paddingVertical="15dp"
                    android:background="@drawable/edittext_background"
                    android:paddingStart="65dp"
                    android:paddingEnd="0dp"
            />

            <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/user"
                    android:contentDescription="@string/et_user"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"/>

        </RelativeLayout>

        <Button
                android:id="@+id/btn_password_recovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/button_background"
                android:textColor="@color/colorDarker"
                android:textStyle="bold"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center_horizontal"
                android:paddingStart="60dp"
                android:paddingEnd="60dp"
                android:text="@string/btn_recover"
                android:textAllCaps="false"/>

        <Button
                android:id="@+id/link_back_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/link_back_to_login"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="4dp"
                android:background="@null"
                android:stateListAnimator="@null"
                android:textAllCaps="false"/>

    </LinearLayout>

    </LinearLayout>
</ScrollView>